--- a/scss/main.css
+++ b/scss/main.css
@@ -1,1 +1,33 @@
-/* No CSS *//*# sourceMappingURL=main.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@400;500&display=swap");
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+#title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 15vh;
+  width: 100%;
+}
+
+#title h1 {
+  font-weight: 600;
+  color: white;
+}
+
+body {
+  background-image: -webkit-gradient(linear, left top, right top, from(#d4e6f1), to(#a9cce3));
+  background-image: linear-gradient(90deg, #d4e6f1, #a9cce3);
+  font-family: 'Heebo', sans-serif;
+}
+/*# sourceMappingURL=main.css.map */
